<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@android:color/white"
    tools:context="com.utbm.lo52.otaupdater.Splash"
    android:theme="@style/NoTitle"
    android:id="@+id/f1">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="right|center_vertical">

        <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/dummy_text"
                android:id="@+id/textView"
                android:gravity="center_horizontal"
                android:textColor="#ff000000"
                android:textStyle="bold"
                android:textSize="20sp" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:background="@drawable/otaupdater"
            android:layout_gravity="center"
            android:contentDescription="@string/author" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dummy_content"
            android:id="@+id/textView3"
            android:gravity="center|center_vertical|center_horizontal"
            android:layout_gravity="center|bottom"
            android:textColor="@android:color/black"
            android:textSize="30dp"
            android:typeface="monospace" />
    </FrameLayout>

</FrameLayout>
